almost fixed modal scrollbar bug

--- a/frontend/src/sass/main.sass
+++ b/frontend/src/sass/main.sass
@@ -1,7 +1,7 @@
 body
   padding-top: 55px
   margin-bottom: 30px
-  overflow-y: scroll
+  width: 100%
 
 .app-footer
   font-weight: normal
